plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.groom.scubadive'
version = '0.0.1-SNAPSHOT'

jar {
    archiveBaseName.set('shoppingmall')
}

java {
//	toolchain {
//		 JDK21 버전으로 자동인식 됨, 직접 버전 명시 방법으로 17 버전 인식 시킴
//		languageVersion = JavaLanguageVersion.of(17)
//	}
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17

}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    // 웹, JPA, 보안, 검증
	// Spring MVC, REST API, 내장 톰캣 서버 포함
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Spring Data JPA + Hibernate 포함. DB 연동과 ORM 처리
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	// 로그인/회원가입 등 보안 기능 제공
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// @Valid, @NotBlank 등 Bean Validation 처리
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// DB
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// 테스트 관련 라이브러리
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
